--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lic/hello-composer",
+    "name": "sawgore/hello-composer",
     "description": "Hola mundo en composer",
     "authors": [
         {
